force-app/main/default/objects/Asset_Summary__c/Asset_Summary__c.object-meta.xml
<CustomObject>
    <label>Asset Summary</label>
    <nameField>
        <displayFormat>ASS-{0000}</displayFormat>
        <label>Asset Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>