force-app/main/default/objects/Asset_Summary__c/fields/Application_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Application_Underwriting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Underwriting</label>
    <referenceTo>Application_Underwriting__c</referenceTo>
    <relationshipLabel>Assets Summary</relationshipLabel>
    <relationshipName>Assets_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>