force-app/main/default/objects/Asset_Summary__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <label>Asset Description</label>
    <type>TextArea</type>
</CustomField>