force-app/main/default/objects/Asset_Summary__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cash-Savings</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposits</fullName>
            </value>
            <value>
                <fullName>Notes and Contracts held</fullName>
            </value>
            <value>
                <fullName>Securities/Bonds</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Liquid Assets</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Business Ownership</fullName>
            </value>
            <value>
                <fullName>Insurance Policy Cash Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>