force-app/main/default/objects/Asset_Summary__c/fields/Market_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Date__c</fullName>
    <label>Market Value Date</label>
    <type>Date</type>
</CustomField>